moved to workspace imports

--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -22,7 +22,7 @@ num_enum = { workspace = true }
 scim_proto = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-serde_with = "3.1.0"
+serde_with = { workspace = true }
 time = { workspace = true, features = ["serde", "std"] }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
