--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ kanidm_proto = { path = "./proto", version = "1.1.0-rc.14-dev" }
 kanidm_unix_int = { path = "./unix_integration" }
 kanidm_utils_users = { path = "./libs/users" }
 
+serde_with = "3.1.0"
 argon2 = { version = "0.5.1", features = ["alloc"] }
 async-recursion = "1.0.4"
 async-trait = "^0.1.72"
