--- a/.github/workflows/kanidm_book.yml
+++ b/.github/workflows/kanidm_book.yml
@@ -83,7 +83,7 @@ jobs:
       - docs_master
     runs-on: ubuntu-latest
     # yamllint disable-line rule:line-length
-    if: ${{ github.action_ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
+    if: ${{ github.ref == 'refs/heads/master' && github.repository == 'kanidm/kanidm' }}
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
