fighting weird build issues

--- a/examples/apache_oauth/Dockerfile
+++ b/examples/apache_oauth/Dockerfile
@@ -1,3 +1,5 @@
+ARG GIT_COMMIT=""
+
 FROM ubuntu/apache2:latest
 
 RUN apt-get update
@@ -10,3 +12,5 @@ RUN a2enmod ssl
 RUN rm /etc/apache2/sites-enabled/000-default.conf
 COPY index.html /var/www/html/index.html
 COPY oauth2.conf /etc/apache2/sites-enabled/oauth2.conf
+
+LABEL "com.kanidm.git-commit"=${GIT_COMMIT}
