--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,9 @@
 # Build the main Kanidmd server
 ARG BASE_IMAGE=opensuse/tumbleweed:latest
+
 FROM ${BASE_IMAGE} AS repos
-RUN \
-    --mount=type=cache,id=zypp,target=/var/cache/zypp \
-    zypper mr -k repo-oss; \
-    zypper mr -k repo-non-oss; \
-    zypper mr -k repo-update; \
-    zypper ref --force ; \
-    zypper -v dup -y
+ADD scripts/zypper_fixing.sh /zypper_fixing.sh
+RUN --mount=type=cache,id=zypp,target=/var/cache/zypp /zypper_fixing.sh
 
 # ======================
 FROM repos AS builder
@@ -22,16 +18,16 @@ ENV RUSTFLAGS="-Clinker=clang -Clink-arg=-fuse-ld=/usr/bin/ld.mold"
 RUN \
     --mount=type=cache,id=zypp,target=/var/cache/zypp \
     zypper install -y --no-recommends \
-        sccache \
-        cargo \
-        clang \
-        make automake autoconf \
-        libopenssl-3-devel pam-devel \
-        sqlite3-devel \
-        rsync \
-        findutils \
-        which \
-        mold
+    sccache \
+    cargo \
+    clang \
+    make automake autoconf \
+    libopenssl-3-devel pam-devel \
+    sqlite3-devel \
+    rsync \
+    findutils \
+    which \
+    mold
 
 COPY . /usr/src/kanidm
 
@@ -47,30 +43,28 @@ COPY . /usr/src/kanidm
 WORKDIR /usr/src/kanidm/kanidmd/daemon
 
 # Exports don't persist through RUN statements.
-RUN \
---mount=type=cache,id=cargo,target=/cargo \
---mount=type=cache,id=sccache,target=/sccache \
-export CARGO_HOME=/cargo; \
-export SCCACHE_DIR=/sccache; \
-export RUSTC_WRAPPER=/usr/bin/sccache; \
-export CC="/usr/bin/clang"; \
+RUN --mount=type=cache,id=cargo,target=/cargo \
+    --mount=type=cache,id=sccache,target=/sccache \
+    export CARGO_HOME=/cargo && \
+    export SCCACHE_DIR=/sccache && \
+    export RUSTC_WRAPPER=/usr/bin/sccache && \
+    export CC="/usr/bin/clang" && \
     cargo build -p daemon ${KANIDM_BUILD_OPTIONS} \
-        --target-dir="/usr/src/kanidm/target/" \
-        --features="${KANIDM_FEATURES}" \
-        --release; \
-    sccache -s
+    --target-dir="/usr/src/kanidm/target/" \
+    --features="${KANIDM_FEATURES}" \
+    --release && sccache -s
 
 # ======================
 
 FROM repos
-
+ARG GIT_COMMIT=""
 RUN \
     --mount=type=cache,id=zypp,target=/var/cache/zypp \
     zypper install -y \
-        timezone \
-        openssl-3 \
-        sqlite3 \
-        pam
+    timezone \
+    openssl-3 \
+    sqlite3 \
+    pam
 
 COPY --from=builder /usr/src/kanidm/target/release/kanidmd /sbin/
 COPY --from=builder /usr/src/kanidm/server/web_ui/pkg /pkg
@@ -80,4 +74,7 @@ EXPOSE 8443 3636
 VOLUME /data
 
 ENV RUST_BACKTRACE 1
+
+LABEL "com.kanidm.git-commit"=${GIT_COMMIT}
+
 CMD [ "/sbin/kanidmd", "server", "-c", "/data/server.toml"]
