Missing content-type header in token response Fixes #1966

--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -28,12 +28,12 @@ kanidmd_lib = { workspace = true }
 # used for webdriver testing
 hyper-tls = { workspace = true }
 # used for webdriver testing
-fantoccini = { version="0.19.3", optional=true}
-
+fantoccini = { version = "0.19.3", optional = true }
+serde = { workspace = true }
 
 
 url = { workspace = true, features = ["serde"] }
-reqwest = { workspace = true, default-features = false, features=["cookies"] }
+reqwest = { workspace = true, default-features = false, features = ["cookies"] }
 sketching = { workspace = true }
 testkit-macros = { workspace = true }
 tracing = { workspace = true, features = ["attributes"] }
