--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -50,6 +50,8 @@ tokio = { workspace = true, features = ["rt", "macros"] }
 url = { workspace = true, features = ["serde"] }
 uuid = { workspace=true }
 zxcvbn = { workspace=true }
+regex.workspace = true
+lazy_static.workspace = true
 
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
