--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,7 @@ hex = "^0.4.3"
 hyper = { version = "0.14.27", features = ["full"] }
 hyper-tls = "0.5.0"
 idlset = "^0.2.4"
+enum-iterator = "1.4.0"
 # idlset = { path = "../idlset" }
 js-sys = "^0.3.63"
 # REMOVE this
