--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -52,7 +52,11 @@ uuid = { workspace=true }
 zxcvbn = { workspace=true }
 regex.workspace = true
 lazy_static.workspace = true
-cursive = "0.20.0"
+
+[dependencies.cursive]
+version = "0.20.0"
+default-features = false
+features = ["crossterm-backend"]
 
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
