adding test build for kanidm with idv-tui feature

--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -36,4 +36,5 @@ jobs:
             libsqlite3-dev
 
       - run: cargo build --workspace
+      - run: cargo build --bin kanidm --features idv-tui
       - run: cargo test
