--- a/unix_integration/pam_kanidm/Cargo.toml
+++ b/unix_integration/pam_kanidm/Cargo.toml
@@ -18,6 +18,8 @@ path =  "src/lib.rs"
 [dependencies]
 kanidm_unix_int = { workspace = true }
 libc = { workspace = true }
+tracing-subscriber = { workspace = true }
+tracing = { workspace = true }
 
 [build-dependencies]
 pkg-config = { workspace = true }
