--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -80,7 +80,7 @@ serde_with = { workspace = true }
 
 # because windows really can't build without the bundled one
 [target.'cfg(target_family = "windows")'.dependencies]
-rusqlite = { workspace = true, features = ["bundled"] }
+rusqlite = { workspace = true, features = ["array", "bundled", "vtab"] }
 whoami = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
