--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ debug = true
 lto = "thin"
 
 [workspace]
+resolver = "2"
 members = [
     "proto",
     "tools/cli",
@@ -69,7 +70,8 @@ axum = { version = "0.6.20", features = [
 axum-csp = { version = "0.0.5" }
 base32 = "^0.4.0"
 base64 = "^0.21.3"
-base64urlsafedata = "0.1.3"
+# base64urlsafedata = "0.1.3"
+base64urlsafedata = { git = "https://github.com/Firstyear/webauthn-rs.git", rev = "35efca72e38116f5ed77cd8701cb3edf0458a243", version = "0.1.4" }
 bytes = "^1.3.0"
 clap = { version = "^4.4.0", features = ["derive"] }
 clap_complete = "^4.4.0"
@@ -192,10 +194,10 @@ wasm-bindgen-test = "0.3.35"
 # webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
 # webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
 
-webauthn-authenticator-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5", features = ["softpasskey", "softtoken", "mozilla"] }
-webauthn-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5", features = ["preview-features"] }
-webauthn-rs-core = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
-webauthn-rs-proto = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+webauthn-authenticator-rs = { git = "https://github.com/Firstyear/webauthn-rs.git", rev = "35efca72e38116f5ed77cd8701cb3edf0458a243", features = ["softpasskey", "softtoken", "mozilla"] }
+webauthn-rs = { git = "https://github.com/Firstyear/webauthn-rs.git", rev = "35efca72e38116f5ed77cd8701cb3edf0458a243", features = ["preview-features"] }
+webauthn-rs-core = { git = "https://github.com/Firstyear/webauthn-rs.git", rev = "35efca72e38116f5ed77cd8701cb3edf0458a243" }
+webauthn-rs-proto = { git = "https://github.com/Firstyear/webauthn-rs.git", rev = "35efca72e38116f5ed77cd8701cb3edf0458a243" }
 
 web-sys = "^0.3.62"
 whoami = "^1.4.1"
