--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ debug = true
 lto = "thin"
 
 [workspace]
+resolver = "2"
 members = [
     "proto",
     "tools/cli",
@@ -39,6 +40,36 @@ license = "MPL-2.0"
 homepage = "https://github.com/kanidm/kanidm/"
 repository = "https://github.com/kanidm/kanidm/"
 
+
+[patch.crates-io]
+## As Kanidm maintains a number of libraries, sometimes during development we need to override them
+## with local or git versions. This patch table allows quick uncommenting to achieve that.
+
+# compact_jwt = { path = "../compact_jwt" }
+# concread = { path = "../concread" }
+
+# idlset = { path = "../idlset" }
+
+# ldap3_client = { path = "../ldap3/client" }
+# ldap3_proto = { path = "../ldap3/proto" }
+# ldap3_client = { git = "https://github.com/kanidm/ldap3.git" }
+# ldap3_proto = { git = "https://github.com/kanidm/ldap3.git" }
+
+# scim_proto = { path = "../scim/proto" }
+# scim_proto = { git = "https://github.com/kanidm/scim.git"  }
+
+base64urlsafedata = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+webauthn-authenticator-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+webauthn-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+webauthn-rs-core = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+webauthn-rs-proto = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+
+# base64urlsafedata = { path = "../webauthn-rs/base64urlsafedata" }
+# webauthn-authenticator-rs = { path = "../webauthn-rs/webauthn-authenticator-rs" }
+# webauthn-rs = { path = "../webauthn-rs/webauthn-rs" }
+# webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
+# webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
+
 [workspace.dependencies]
 kanidmd_core = { path = "./server/core" }
 kanidmd_lib = { path = "./server/lib" }
@@ -71,14 +102,12 @@ base32 = "^0.4.0"
 base64 = "^0.21.3"
 base64urlsafedata = "0.1.3"
 bytes = "^1.3.0"
-clap = { version = "^4.4.0", features = ["derive"] }
+clap = { version = "^4.4.0", features = ["derive", "env"] }
 clap_complete = "^4.4.0"
 # Forced by saffron/cron
 chrono = "^0.4.26"
 compact_jwt = { version = "^0.2.3", default-features = false }
-# compact_jwt = { path = "../compact_jwt" }
 concread = "^0.4.1"
-# concread = { path = "../concread" }
 cron = "0.12.0"
 crossbeam = "0.8.1"
 criterion = "^0.5.1"
@@ -99,17 +128,11 @@ hyper = { version = "0.14.27", features = ["full"] }
 hyper-tls = "0.5.0"
 idlset = "^0.2.4"
 enum-iterator = "1.4.0"
-# idlset = { path = "../idlset" }
 js-sys = "^0.3.63"
 # REMOVE this
 lazy_static = "^1.4.0"
 ldap3_client = "^0.3.5"
 ldap3_proto = { version = "^0.3.5", features = ["serde"] }
-
-# ldap3_client = { path = "../ldap3/client", version = "0.3.2" }
-# ldap3_proto = { path = "../ldap3/proto", version = "^0.3.2", features = ["serde"] }
-# ldap3_client = { git = "https://github.com/kanidm/ldap3.git", version = "0.3.0" }
-# ldap3_proto = { git = "https://github.com/kanidm/ldap3.git", version = "0.3.0" }
 
 libc = "^0.2.147"
 libnss = "^0.4.0"
@@ -139,9 +162,6 @@ rpassword = "^7.2.0"
 rusqlite = "^0.28.0"
 
 scim_proto = "^0.2.1"
-# scim_proto = { path = "../scim/proto", version = "^0.2.1" }
-# scim_proto = { git = "https://github.com/kanidm/scim.git", version = "0.1.1" }
-
 sd-notify = "^0.4.1"
 selinux = "^0.4.2"
 serde = "^1.0.188"
@@ -168,9 +188,6 @@ touch = "^0.0.1"
 tracing = { version = "^0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
 # tracing = { version = "^0.1.37" }
 tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }
-
-# tracing-forest = { path = "/Users/william/development/tracing-forest/tracing-forest" }
-# tracing-forest = { git = "https://github.com/QnnOkabayashi/tracing-forest.git", rev = "77daf8c8abf010b87d45ece2bf656983c6f8cecb" }
 tracing-forest = "^0.1.6"
 
 tss-esapi = "^7.2.0"
@@ -183,19 +200,10 @@ wasm-bindgen = "^0.2.86"
 wasm-bindgen-futures = "^0.4.30"
 wasm-bindgen-test = "0.3.35"
 
-# webauthn-authenticator-rs = { version = "0.4.8", features = ["softpasskey", "softtoken"] }
-# webauthn-rs = "0.4.8"
-# webauthn-rs-core = "0.4.8"
-# webauthn-rs-proto = "0.4.8"
-# webauthn-authenticator-rs = { path = "../webauthn-rs/webauthn-authenticator-rs", features = ["softpasskey", "softtoken", "mozilla"] }
-# webauthn-rs = { path = "../webauthn-rs/webauthn-rs", features = ["preview-features"] }
-# webauthn-rs-core = { path = "../webauthn-rs/webauthn-rs-core" }
-# webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto" }
-
-webauthn-authenticator-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5", features = ["softpasskey", "softtoken", "mozilla"] }
-webauthn-rs = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5", features = ["preview-features"] }
-webauthn-rs-core = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
-webauthn-rs-proto = { git = "https://github.com/kanidm/webauthn-rs.git", rev = "429662e34d6e760af8cff68760567c6b56dbb2d5" }
+webauthn-authenticator-rs = { version = "0.5.0-dev", features = ["softpasskey", "softtoken", "mozilla"] }
+webauthn-rs = { version = "0.5.0-dev", features = ["preview-features"] }
+webauthn-rs-core = "0.5.0-dev"
+webauthn-rs-proto = "0.5.0-dev"
 
 web-sys = "^0.3.62"
 whoami = "^1.4.1"
