--- a/tools/cli/Cargo.toml
+++ b/tools/cli/Cargo.toml
@@ -53,6 +53,7 @@ uuid = { workspace=true }
 zxcvbn = { workspace=true }
 lazy_static.workspace = true
 regex.workspace = true
+exitcode = "1.1.2"
 
 [dependencies.cursive]
 version = "0.20.0"
