reinstating build limits

--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -3,6 +3,8 @@ name: "Linux Build and Test"
 # Trigger the workflow on push to master or pull request
 "on":
   push:
+    branches:
+      - master
   pull_request:
 
 env:
