move from git2 to gix

--- a/libs/profiles/Cargo.toml
+++ b/libs/profiles/Cargo.toml
@@ -24,4 +24,4 @@ base64 = { workspace = true }
 
 [build-dependencies]
 base64 = { workspace = true }
-git2 = { workspace = true }
+gix = { workspace = true }
