Dependencies - validate sqlite3 needs to be specified Fixes #2083

--- a/.github/workflows/kanidm_individual_book.yml
+++ b/.github/workflows/kanidm_individual_book.yml
@@ -30,9 +30,12 @@ jobs:
       - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang build-essential \
-            librust-openssl-dev libssl-dev \
-            libsqlite3-dev libudev-dev \
+          sudo apt-get install -y \
+            clang \
+            build-essential \
+            librust-openssl-dev \
+            libssl-dev \
+            libudev-dev \
             libpam0g-dev
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v1
