--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -32,8 +32,7 @@ jobs:
           sudo apt-get install -y \
             libpam0g-dev \
             libudev-dev \
-            libssl-dev \
-            libsqlite3-dev
+            libssl-dev
 
       - name: "Build the workspace"
         run: cargo build --workspace
