--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,6 +128,11 @@ hex = "^0.4.3"
 hyper = { version = "0.14.27", features = ["full"] }
 hyper-tls = "0.5.0"
 idlset = "^0.2.4"
+image = { version = "0.24.7", default-features = false, features = [
+    "gif",
+    "jpeg",
+    "webp",
+] }
 enum-iterator = "1.4.0"
 js-sys = "^0.3.63"
 # REMOVE this
@@ -138,6 +143,7 @@ ldap3_proto = { version = "^0.3.5", features = ["serde"] }
 libc = "^0.2.148"
 libnss = "^0.4.0"
 libsqlite3-sys = "^0.25.0"
+lodepng = "3.7.2"
 lru = "^0.8.0"
 mathru = "^0.13.0"
 notify-debouncer-full = { version = "0.1" }
@@ -174,6 +180,7 @@ sketching = { path = "./libs/sketching" }
 smartstring = "^1.0.1"
 smolset = "^1.3.1"
 sshkeys = "^0.3.1"
+svg = "0.13.1"
 syn = { version = "2.0.32", features = ["full"] }
 tempfile = "3.8.0"
 testkit-macros = { path = "./server/testkit-macros" }
