--- a/unix_integration/Cargo.toml
+++ b/unix_integration/Cargo.toml
@@ -78,6 +78,7 @@ kanidm_utils_users = { workspace = true }
 
 [dev-dependencies]
 kanidmd_core = { workspace = true }
+kanidmd_testkit = { workspace = true }
 
 [build-dependencies]
 clap = { workspace = true, features = ["derive"] }
