--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -57,8 +57,8 @@ tracing = { workspace = true, features = ["attributes"] }
 tracing-subscriber = { workspace = true, features = ["time", "json"] }
 urlencoding = { workspace = true }
 tempfile = { workspace = true }
+url = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde", "v4"] }
-
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
