--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -52,3 +52,5 @@ futures = { workspace = true }
 time = { workspace = true }
 openssl = { workspace = true }
 tokio-openssl = { workspace = true }
+kanidm_lib_crypto = { workspace = true }
+uuid = { workspace = true }
