--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,7 +91,6 @@ axum = { version = "0.6.20", features = [
     "form",
     "headers",
     "http2",
-    "http2",
     "json",
     "macros",
     "multipart",
@@ -208,6 +207,7 @@ tss-esapi = "^7.3.0"
 url = "^2.4.1"
 urlencoding = "2.1.3"
 users = "^0.11.0"
+utoipa = "3.5.0"
 uuid = "^1.4.1"
 
 wasm-bindgen = "^0.2.86"
