--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -62,13 +62,14 @@ urlencoding = { workspace = true }
 tempfile = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde", "v4"] }
-utoipa = { version = "3.5.0", features = [
+utoipa = { workspace = true, features = [
     "axum_extras",
     "openapi_extensions",
     "preserve_order",     #  Preserve order of properties when serializing the schema for a component.
     # "uuid",
 ] }
 utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
+utoipa-redoc = { version = "0.1.0", features = ["axum"] }
 
 [dev-dependencies]
 walkdir = { workspace = true }
