--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -22,6 +22,7 @@ bytes = { workspace = true }
 chrono = { workspace = true }
 compact_jwt = { workspace = true }
 cron = { workspace = true }
+filetime = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
 http = { workspace = true }
