Add file diagnosis

--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { workspace = true, default-features = false, features = [
     "multipart",
 ] }
 kanidm_proto = { workspace = true }
+kanidm_lib_file_permissions = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 time = { workspace = true, features = ["serde", "std"] }
