--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -32,6 +32,7 @@ kanidm_proto = { workspace = true }
 kanidm_utils_users = { workspace = true }
 kanidmd_lib = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
+kanidm_lib_file_permissions = { workspace = true }
 ldap3_proto = { workspace = true }
 libc = { workspace = true }
 openssl = { workspace = true }
