--- a/server/web_ui/Cargo.toml
+++ b/server/web_ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kanidmd_web_ui"
-description = "Kanidm Server Web User Interface"
+description = "Kanidm Server Web UI - User UI"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 
 version = "1.1.0-rc.14-dev"
