--- a/server/web_ui/login_flows/Cargo.toml
+++ b/server/web_ui/login_flows/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "kanidmd_web_ui_admin"
-description = "Kanidm Server Web UI - Admin Interface"
+name = "kanidmd_web_ui_login_flows"
+description = "Kanidm Server Web UI - Login Flows"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 
 version = "1.1.0-rc.14-dev"
@@ -18,34 +18,34 @@ repository = "https://github.com/kanidm/kanidm/"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+gloo = { workspace = true }
+js-sys = { workspace = true }
 kanidm_proto = { workspace = true, features = ["wasm"] }
 kanidmd_web_ui_shared = { workspace = true }
-gloo = { workspace = true }
-gloo-timers = "0.3.0"
-js-sys = { workspace = true }
-lazy_static.workspace = true
 qrcode = { workspace = true, features = ["svg"] }
-regex.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 serde-wasm-bindgen = { workspace = true }
-time = { workspace = true }
-url = { workspace = true }
-uuid = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = { workspace = true }
-wasm-timer = "0.2.5"
+url = { workspace = true }
+uuid = { workspace = true }
 yew = { workspace = true, features = ["csr"] }
 yew-router = { workspace = true }
+time = { workspace = true }
+gloo-timers = "0.3.0"
+wasm-timer = "0.2.5"
+regex.workspace = true
+lazy_static.workspace = true
 
 [dependencies.web-sys]
 workspace = true
 features = [
-    # "AuthenticationExtensionsClientOutputs",
-    # "AuthenticatorResponse",
-    # "CredentialCreationOptions",
-    # "CredentialRequestOptions",
-    # "CredentialsContainer",
+    "AuthenticationExtensionsClientOutputs",
+    "AuthenticatorResponse",
+    "CredentialCreationOptions",
+    "CredentialRequestOptions",
+    "CredentialsContainer",
     "DomTokenList",
     "Element",
     "Event",
@@ -56,15 +56,15 @@ features = [
     "HtmlDocument",
     "HtmlFormElement",
     "Navigator",
-    # "PublicKeyCredential",
-    # "PublicKeyCredentialCreationOptions",
-    # "PublicKeyCredentialRpEntity",
-    # "PublicKeyCredentialUserEntity",
+    "PublicKeyCredential",
+    "PublicKeyCredentialCreationOptions",
+    "PublicKeyCredentialRpEntity",
+    "PublicKeyCredentialUserEntity",
     "Request",
-    # "RequestCredentials",
-    # "RequestInit",
-    # "RequestMode",
-    # "RequestRedirect",
+    "RequestCredentials",
+    "RequestInit",
+    "RequestMode",
+    "RequestRedirect",
     "Response",
     "Window",
 ]
