--- a/server/web_ui/shared/Cargo.toml
+++ b/server/web_ui/shared/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kanidmd_web_ui_shared"
-description = "Kanidm Server Shared Widgets"
+description = "Kanidm Server Web UI - Shared Library"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
 
 version = "1.1.0-rc.14-dev"
